[package]
name = "wgpu-wasm-dispatch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "cfc038a" }
futures = "0.3.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-rayon = "1.0.3" # alternative https://github.com/chemicstry/wasm_thread
console_log = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.61", features = [
  "OffscreenCanvas",
  "HtmlElement", # from here all features are for integrationtests
  "CssStyleDeclaration",
  "HtmlCanvasElement",
  "FileReader",
  "Blob"
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.61"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # version in wasm-pack is to old for simd128