[package]
name = "wgpu-wasm-dispatch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "cfc038a" }
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", features = [
  "HtmlElement",
  "CssStyleDeclaration",
  "HtmlCanvasElement"
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
